# auralabs

./: .gitignore  Aura.spec  README.md  build.py  description.md  pyproject.toml  pyrightconfig.json  run_build.cmd  test_ws.py
.claude/: settings.local.json
aura/: __init__.py  __main__.py  commands.py  config.py  models.py  plugins.py  security.py
aura/body/: apps.py  audit.py  clipboard.py  confirm.py  delegate.py  desktop.py  filesystem.py  hardware.py  knowledge.py  memory_tools.py  notify.py  process.py  registry.py  schedule.py  sysinfo.py  trigger_tools.py  vision.py  voice.py  web.py  workflow.py
aura/brain/: context.py  creator.py  graph.py  kernel.py  llm.py  long_memory.py  memory.py  rag.py  researcher.py  router.py  run.py  scheduler.py  tools.py  triggers.py  workflows.py
aura/mcp/: __init__.py  client.py  config.py  server.py
aura/server/: app.py  routes.py  settings_routes.py  upload.py  webhook_routes.py
aura/service/: startup.py  tray.py
plugins/: example_plugin.py
tests/: conftest.py  test_confirm.py  test_context.py  test_memory.py  test_models.py  test_registry.py  test_tools.py
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: AgentBadge.tsx  BlobView.tsx  ChatPanel.tsx  ConnectorsPanel.tsx  GlassCard.tsx  InputBar.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  ThinkingLog.tsx  TitleBar.tsx
ui/src/hooks/: useHardware.ts  useWebSocket.ts
ui/src/stores/: chatStore.ts
(+1 files in other folders)
