[project]
name = "aura"
version = "0.1.0"
description = "Multi-agent desktop orchestrator powered by NVIDIA NIM"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "psutil>=6.0",
    "pyautogui>=0.9",
    "Pillow>=12.0",
    "pyperclip>=1.9",
    "pystray>=0.19",
    "GPUtil>=1.4",
    "keyboard>=0.13",
    "websockets>=13.0",
    "duckduckgo-search>=7.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mcp>=1.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "watchdog>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
service = ["pywin32>=306"]

[tool.setuptools.packages.find]
include = ["aura*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
